# nascor

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml
.github/actions/pre-commit/: action.yaml
.github/workflows/: mkdocs.yaml  pre-commit.yaml  pytest.yaml
docs/: api.md  index.md
nascor/: __init__.py
tests/: test_ages.py  test_nascor.py
