[project]
name = "nascor"
version = "0.1.0"
description = "Parse and manipulate age ranges"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.2",
    "mkdocstrings-python>=2.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
